[gd_scene load_steps=14 format=3 uid="uid://t3k3es580mfg"]

[ext_resource type="Script" uid="uid://33e1q6e2hxxy" path="res://scripts/ui/hud.gd" id="1_doao0"]
[ext_resource type="FontFile" uid="uid://cfxfvqdxhxg26" path="res://assets/fonts/lilita_one_regular.ttf" id="2_trjcb"]
[ext_resource type="PackedScene" uid="uid://bdi5vfh3p5wd4" path="res://scenes/player/player.tscn" id="3_0rg4w"]
[ext_resource type="PackedScene" uid="uid://cuwunojswrryo" path="res://scenes/enemies/enemy_ranged.tscn" id="5_d6mpo"]
[ext_resource type="PackedScene" uid="uid://xh7qo3fjn53j" path="res://scenes/enemies/enemy_horde.tscn" id="6_khumw"]
[ext_resource type="PackedScene" uid="uid://r7rt7pth4u7o" path="res://scenes/template_environment_components/wall_low.tscn" id="7_st5yh"]
[ext_resource type="PackedScene" uid="uid://dpm3l05d7fu35" path="res://scenes/template_environment_components/platform.tscn" id="8_ax8sj"]
[ext_resource type="PackedScene" uid="uid://c71evdjblk5wp" path="res://scenes/template_environment_components/wall_high.tscn" id="9_kib7f"]
[ext_resource type="PackedScene" uid="uid://bvx5cvigosg0s" path="res://scenes/template_environment_components/platform_large_grass.tscn" id="10_8fsq0"]
[ext_resource type="PackedScene" uid="uid://oqfhfp1a80qd" path="res://scenes/template_environment_components/cloud.tscn" id="11_3qt0s"]
[ext_resource type="PackedScene" uid="uid://qrpq15dcfyie" path="res://scenes/ui/upgrade_station.tscn" id="12_trjcb"]

[sub_resource type="LabelSettings" id="LabelSettings_m85j0"]
font = ExtResource("2_trjcb")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[sub_resource type="NavigationMesh" id="NavigationMesh_hysi3"]
vertices = PackedVector3Array(-5.59572, 3.75, -37.2968, -5.34572, 4.25, -36.7968, -4.59572, 4, -37.0468, 6.90428, 8.25, -30.7968, 4.90428, 9, -29.2968, 6.65428, 9, -27.5468, 7.15428, 9, -27.5468, 8.40428, 8.25, -29.0468, 8.40428, 8.25, -29.5468, -24.5957, 0.5, -22.0468, -22.0957, 0.5, -24.5468, -22.3457, 0.25, -25.5468, -25.0957, 0.25, -25.0468, -25.5957, 0.25, -22.2968, -5.09572, 0.5, -9.0468, -3.09572, 0.5, -9.5468, -3.09572, 0.5, -24.5468, -5.34572, 0.5, -8.0468, -24.5957, 0.5, -8.0468, 23.6543, 0.25, -25.5468, 22.4043, 0.25, -25.5468, 22.1543, 0.5, -24.5468, 24.6543, 0.5, -22.0468, 25.6543, 0.25, -22.2968, 25.1543, 0.25, -24.7968, 4.40428, 0.5, -24.5468, 5.90428, 0.5, -11.7968, 12.4043, 0.5, -3.2968, 24.6543, 0.5, -1.0468, 12.6543, 0.5, -1.0468, 4.40428, 0.5, -12.7968, 5.90428, 0.5, -11.0468, 9.65428, 0.5, -3.2968, -24.5957, 11.25, -24.0468, -24.3457, 11, -24.5468, -24.3457, 10.75, -25.2968, -26.3457, 10.5, -25.0468, -26.3457, 10.75, -24.0468, -2.09572, 0.5, -9.5468, -1.84572, 0.5, -9.0468, 3.15428, 0.5, -11.2968, 3.15428, 0.5, -12.2968, -30.5957, 3.75, -14.2968, -30.3457, 3.75, -13.0468, -29.5957, 3.75, -13.5468, -29.8457, 3.75, -14.2968, 25.4043, 9.25, -10.7968, 27.4043, 8.25, -11.5468, 26.6543, 8.25, -13.7968, 24.6543, 9, -13.2968, 5.15428, 0.5, 9.4532, 5.40428, 0.5, 9.9532, 6.40428, 0.5, 8.9532, 4.90428, 0.5, 7.7032, 2.40428, 0.5, 9.4532, 7.65428, 0.5, 4.9532, 7.90428, 0.5, 5.4532, 9.65428, 0.5, 3.7032, 9.40428, 0.75, 2.7032, -0.845722, 0.5, 4.9532, 4.90428, 0.5, 6.4532, 6.40428, 0.5, 4.9532, 4.40428, 0.5, -10.0468, -2.09572, 0.5, -7.5468, 5.15428, 0.5, -10.0468, 9.40428, 0.75, -2.2968, -0.845722, 0.5, 7.7032, 11.6543, 1.25, 2.7032, 11.6543, 1.25, -2.2968, -3.59572, 0.5, 4.7032, -3.84572, 0.5, -7.0468, -4.59572, 0.5, 8.9532, -3.84572, 0.5, 8.2032, -4.34572, 0.5, 7.7032, -6.59572, 0.5, 8.9532, -4.34572, 0.5, 5.2032, -4.84572, 0.5, -7.0468, -24.5957, 0.5, 9.9532, -6.84572, 0.5, 9.9532, 26.9043, 14.25, -5.0468, 28.6543, 14.25, -5.2968, 28.1543, 13.5, -6.7968, 26.6543, 13.5, -6.5468, -29.8457, 18.25, -4.5468, -28.0957, 18.75, -4.5468, -27.8457, 18.5, -5.0468, -27.8457, 18, -6.0468, -29.5957, 17.75, -6.0468, -29.8457, 18, -5.5468, 1.90428, 4, -4.0468, 1.90428, 4, -2.7968, 3.15428, 4, -2.7968, 3.15428, 4, -4.0468, -7.09572, 3.5, -3.0468, -7.09572, 3.5, -1.7968, -5.84572, 3.5, -1.7968, -5.84572, 3.5, -3.0468, 12.6543, 0.5, 1.4532, 24.6543, 0.5, 1.4532, 7.40428, 0.5, 9.2032, 5.40428, 0.5, 10.9532, 5.65428, 0.5, 24.7032, 25.1543, 0.25, 24.7032, 25.6543, 0.25, 22.4532, 24.6543, 0.5, 22.2032, 22.1543, 0.5, 24.7032, 22.4043, 0.25, 25.7032, 9.15428, 0.5, 7.4532, 9.15428, 0.5, 6.4532, 12.4043, 0.5, 3.7032, -3.09572, 2, 5.9532, -3.09572, 2, 7.2032, -1.84572, 2, 7.2032, -1.84572, 2, 5.9532, 6.90428, 2, 7.9532, 7.90428, 2, 7.2032, 7.15428, 2, 6.2032, 6.15428, 2, 6.7032, -4.09572, 0.5, 9.2032, -4.09572, 0.5, 10.7032, 2.15428, 0.5, 11.4532, 1.90428, 0.5, 9.7032, -1.09572, 0.5, 8.2032, -4.59572, 0.5, 10.9532, -3.84572, 0.5, 23.2032, -1.84572, 0.5, 22.9532, 5.15428, 0.5, 11.4532, -0.345722, 0.5, 24.7032, -24.5957, 0.5, 22.2032, -25.5957, 0.25, 22.4532, -25.0957, 0.25, 24.9532, -22.3457, 0.25, 25.7032, -22.0957, 0.5, 24.7032, -6.59572, 0.5, 10.9532, -5.09572, 0.5, 24.7032, 13.4043, 11.25, 17.9532, 14.1543, 11.75, 18.2032, 14.1543, 11.75, 17.2032, 13.4043, 11.5, 17.2032, -8.59572, 10.25, 22.4532, -7.84572, 11, 21.2032, -7.84572, 11, 20.4532, -10.0957, 11.5, 19.7032, -11.0957, 10.75, 21.4532, -11.0957, 10.5, 21.9532, -3.84572, 4.25, 25.2032, -3.09572, 4.25, 26.4532, -1.59572, 4.25, 25.4532, -2.59572, 4.25, 24.2032)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(8, 7, 3), PackedInt32Array(3, 7, 6), PackedInt32Array(3, 6, 5), PackedInt32Array(3, 5, 4), PackedInt32Array(13, 12, 9), PackedInt32Array(9, 12, 10), PackedInt32Array(10, 12, 11), PackedInt32Array(16, 15, 14), PackedInt32Array(14, 17, 16), PackedInt32Array(16, 17, 10), PackedInt32Array(10, 17, 9), PackedInt32Array(9, 17, 18), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 24), PackedInt32Array(21, 24, 22), PackedInt32Array(22, 24, 23), PackedInt32Array(21, 22, 25), PackedInt32Array(25, 22, 26), PackedInt32Array(26, 22, 27), PackedInt32Array(27, 22, 28), PackedInt32Array(28, 29, 27), PackedInt32Array(26, 30, 25), PackedInt32Array(31, 26, 32), PackedInt32Array(32, 26, 27), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(36, 33, 37), PackedInt32Array(39, 38, 40), PackedInt32Array(40, 38, 41), PackedInt32Array(25, 30, 41), PackedInt32Array(38, 15, 41), PackedInt32Array(41, 15, 16), PackedInt32Array(41, 16, 25), PackedInt32Array(45, 44, 42), PackedInt32Array(42, 44, 43), PackedInt32Array(48, 47, 49), PackedInt32Array(49, 47, 46), PackedInt32Array(52, 51, 50), PackedInt32Array(52, 50, 53), PackedInt32Array(53, 50, 54), PackedInt32Array(56, 55, 57), PackedInt32Array(57, 55, 58), PackedInt32Array(60, 59, 61), PackedInt32Array(62, 64, 39), PackedInt32Array(39, 64, 63), PackedInt32Array(55, 61, 58), PackedInt32Array(58, 61, 65), PackedInt32Array(53, 54, 60), PackedInt32Array(60, 54, 66), PackedInt32Array(60, 66, 59), PackedInt32Array(65, 68, 58), PackedInt32Array(58, 68, 67), PackedInt32Array(31, 32, 64), PackedInt32Array(64, 32, 65), PackedInt32Array(59, 69, 61), PackedInt32Array(61, 69, 65), PackedInt32Array(65, 69, 63), PackedInt32Array(65, 63, 64), PackedInt32Array(63, 69, 70), PackedInt32Array(39, 40, 62), PackedInt32Array(73, 72, 71), PackedInt32Array(71, 74, 73), PackedInt32Array(73, 74, 75), PackedInt32Array(75, 74, 76), PackedInt32Array(76, 74, 17), PackedInt32Array(74, 78, 17), PackedInt32Array(17, 78, 77), PackedInt32Array(17, 77, 18), PackedInt32Array(70, 69, 76), PackedInt32Array(76, 69, 75), PackedInt32Array(82, 81, 79), PackedInt32Array(79, 81, 80), PackedInt32Array(88, 87, 83), PackedInt32Array(83, 87, 84), PackedInt32Array(84, 87, 85), PackedInt32Array(85, 87, 86), PackedInt32Array(92, 91, 89), PackedInt32Array(89, 91, 90), PackedInt32Array(96, 95, 93), PackedInt32Array(93, 95, 94), PackedInt32Array(29, 28, 97), PackedInt32Array(97, 28, 98), PackedInt32Array(52, 99, 51), PackedInt32Array(51, 99, 100), PackedInt32Array(100, 99, 101), PackedInt32Array(103, 102, 104), PackedInt32Array(104, 102, 105), PackedInt32Array(105, 102, 106), PackedInt32Array(99, 107, 101), PackedInt32Array(101, 107, 105), PackedInt32Array(105, 107, 104), PackedInt32Array(104, 107, 98), PackedInt32Array(57, 108, 56), PackedInt32Array(109, 97, 98), PackedInt32Array(107, 109, 98), PackedInt32Array(108, 57, 107), PackedInt32Array(107, 57, 109), PackedInt32Array(113, 112, 110), PackedInt32Array(110, 112, 111), PackedInt32Array(116, 115, 117), PackedInt32Array(117, 115, 114), PackedInt32Array(72, 118, 71), PackedInt32Array(118, 72, 119), PackedInt32Array(119, 72, 122), PackedInt32Array(119, 122, 121), PackedInt32Array(119, 121, 120), PackedInt32Array(122, 66, 121), PackedInt32Array(121, 66, 54), PackedInt32Array(119, 120, 123), PackedInt32Array(123, 120, 125), PackedInt32Array(123, 125, 124), PackedInt32Array(126, 100, 101), PackedInt32Array(127, 125, 101), PackedInt32Array(101, 125, 120), PackedInt32Array(101, 120, 126), PackedInt32Array(129, 128, 130), PackedInt32Array(130, 128, 132), PackedInt32Array(130, 132, 131), PackedInt32Array(78, 133, 124), PackedInt32Array(124, 134, 78), PackedInt32Array(78, 134, 132), PackedInt32Array(78, 132, 128), PackedInt32Array(78, 128, 77), PackedInt32Array(133, 123, 124), PackedInt32Array(138, 137, 135), PackedInt32Array(135, 137, 136), PackedInt32Array(140, 139, 141), PackedInt32Array(141, 139, 142), PackedInt32Array(142, 139, 143), PackedInt32Array(143, 139, 144), PackedInt32Array(145, 148, 146), PackedInt32Array(146, 148, 147)]

[node name="Main" type="Node3D"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_doao0")

[node name="Panel" type="Panel" parent="HUD"]
offset_right = 144.0
offset_bottom = 164.0

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="HUD"]
offset_left = 48.0
offset_top = 627.0
offset_right = 138.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_m85j0")
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="WeaponInfoLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0

[node name="InteractLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -224.835
offset_right = 77.0
offset_bottom = -201.835
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "\"E\" Interact"

[node name="PointsLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Points: "

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="Enemies" type="Node" parent="."]

[node name="enemy_ranged" parent="Enemies" instance=ExtResource("5_d6mpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6068, 0.00180632, -1.07775)
firing_rate = 3
firing_target_offset = -0.3

[node name="enemy-horde" parent="Enemies" instance=ExtResource("6_khumw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)
movement_speed = 4.0

[node name="enemy-horde2" parent="Enemies" instance=ExtResource("6_khumw")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.82122, 0, -14.6628)
movement_speed = 8.0

[node name="enemy-horde3" parent="Enemies" instance=ExtResource("6_khumw")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.17979, 0, -12)
movement_speed = 8.0

[node name="enemy-horde4" parent="Enemies" instance=ExtResource("6_khumw")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0049, 0, -15.6041)
movement_speed = 8.0

[node name="enemy-horde5" parent="Enemies" instance=ExtResource("6_khumw")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.05556, 0, -15.1545)
movement_speed = 8.0

[node name="enemy-horde6" parent="Enemies" instance=ExtResource("6_khumw")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7452, 0, -12)
movement_speed = 8.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_hysi3")

[node name="Level" type="Node" parent="NavigationRegion3D"]

[node name="wall-low" parent="NavigationRegion3D/Level" instance=ExtResource("7_st5yh")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -3.55333, 0.05, -8.26898)

[node name="wall-low3" parent="NavigationRegion3D/Level" instance=ExtResource("7_st5yh")]
transform = Transform3D(-1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, -1, 3.63223, 0.05, 10.4473)

[node name="platform" parent="NavigationRegion3D/Level" instance=ExtResource("8_ax8sj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, 6.5)

[node name="platform2" parent="NavigationRegion3D/Level" instance=ExtResource("8_ax8sj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 2.5, -2.5)

[node name="platform3" parent="NavigationRegion3D/Level" instance=ExtResource("8_ax8sj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 3, -3.5)

[node name="platform4" parent="NavigationRegion3D/Level" instance=ExtResource("8_ax8sj")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 7, 1, 7)

[node name="wall-high" parent="NavigationRegion3D/Level" instance=ExtResource("9_kib7f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 0, 10)

[node name="wall-high2" parent="NavigationRegion3D/Level" instance=ExtResource("9_kib7f")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 4.5, 0, -11.5)

[node name="platform-large-grass" parent="NavigationRegion3D/Level" instance=ExtResource("10_8fsq0")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 0, -0.5, 0)

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="NavigationRegion3D/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.07916, 0, 3)
use_collision = true
polygon = PackedVector2Array(0, 0, 1.60592, 0.993088, 3, 1, 3, 0)
depth = 5.78

[node name="Decoration" type="Node" parent="NavigationRegion3D"]

[node name="cube2" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(1.49603, 0.232188, 3.70243, 1.85892, 3.40786, -0.964843, -3.21035, 2.08149, 1.16666, -9.48509, 8.49799, 20.5554)

[node name="cube9" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(1.49603, 1.85892, -3.21035, 0.232188, 3.40786, 2.08149, 3.70243, -0.964843, 1.16666, 25.5597, 6.35221, -12.1167)

[node name="cube5" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(3.0771, 1.12972, -2.29242, -0.0239142, 3.60054, 1.74228, 2.55556, -1.32658, 2.77656, 6.4111, 6.35221, -28.6551)

[node name="cube3" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(2.12132, 0, 2.12132, 0, 3, 0, -2.12132, 0, 2.12132, -2.75413, 2.42683, 25.3984)

[node name="cube10" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(0.776457, -2.89778, 2.66454e-15, 1.44889, 0.388229, -2.59808, 2.50955, 0.672432, 1.5, 27.5131, 12.0265, -5.37209)

[node name="cube11" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(0.672432, 2.89778, -0.388229, -2.50955, 0.776457, 1.44889, 1.5, 0, 2.59808, -28.6125, 16.2998, -4.89238)

[node name="cube12" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(0.672432, 2.89778, -0.388229, -2.50955, 0.776457, 1.44889, 1.5, 0, 2.59808, -25.14, 8.80719, -24.2564)

[node name="cube6" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(-1.73205, 0.965926, 0.258819, -1, -1.67303, -0.448288, 0, -0.517638, 1.93185, 14.1295, 10.1139, 17.5347)

[node name="cube7" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(1.41421, 0, -1.41421, 1, 1.41421, 1, 1, -1.41421, 1, -5.11081, 2.42683, -36.641)

[node name="cube8" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(1.73205, 0, 1, 0, 2, 0, -1, 0, 1.73205, -30.1261, 2.42683, -13.7339)

[node name="cube4" parent="NavigationRegion3D/Decoration" instance=ExtResource("11_3qt0s")]
transform = Transform3D(1.12202, 1.39419, -2.40776, 1.53922, 1.85165, 1.78946, 2.31773, -1.90463, -0.0227883, -0.881504, 13.0297, -30.1859)

[node name="UpgradeStation" parent="." instance=ExtResource("12_trjcb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.99539, 1.13871, 0)

[node name="Player" parent="." instance=ExtResource("3_0rg4w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.1508, 6.9, 18.091)
wall_min_slide_angle = 0.0523599
