[gd_scene load_steps=4 format=3 uid="uid://cvsj2ocn18c6h"]

[ext_resource type="Script" uid="uid://33e1q6e2hxxy" path="res://scripts/ui/hud.gd" id="1_hqnrr"]
[ext_resource type="FontFile" uid="uid://cfxfvqdxhxg26" path="res://assets/fonts/lilita_one_regular.ttf" id="2_bo48s"]

[sub_resource type="LabelSettings" id="LabelSettings_nu0x4"]
font = ExtResource("2_bo48s")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hqnrr")

[node name="Panel" type="Panel" parent="."]
offset_right = 144.0
offset_bottom = 164.0
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="."]
offset_left = 48.0
offset_top = 627.0
offset_right = 138.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_nu0x4")
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="AmmoLabel" type="Label" parent="."]
offset_left = 1150.0
offset_top = 627.0
offset_right = 1240.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "x30"
label_settings = SubResource("LabelSettings_nu0x4")
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="WeaponInfoLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="InteractLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -224.835
offset_right = 77.0
offset_bottom = -201.835
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "\"E\" Interact"

[node name="PointsLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Points: "
metadata/_edit_use_anchors_ = true
